add calculates for prices

--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
 </head>
 
 <body>
+    <label>Nome Cognome</label>
+    <input type="text" id="name-surname" value="Gioele Runza">
+    <label>Km da percorrere</label>
+    <input type="number" id="kms" value="232">
+    <label>Fascia d'età</label>
+    <select id="age">
+        <option value="maggiorenne">Maggiorenne</option>
+        <option value="minorenne">Minorenne</option>
+        <option value="over65">Over 65</option>
+    </select>
+    <button id="generate">Genera</button>
+    <button id="discard">Annulla</button>
+
+    <p id="elementname"></p>
+    <p id="elementkms"></p>
+    <p id="elementage"></p>
 
     <script src="js/script.js"></script>
 </body>
