--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <label>Nome Cognome</label>
-    <input type="text" id="name-surname" value="Gioele Runza">
+    <input type="text" id="name-surname">
     <label>Km da percorrere</label>
-    <input type="number" id="kms" value="10">
+    <input type="number" id="kms" value="98">
     <label>Fascia d'età</label>
     <select id="age">
         <option value="maggiorenne">Maggiorenne</option>
