--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <label>Nome Cognome</label>
     <input type="text" id="name-surname">
     <label>Km da percorrere</label>
-    <input type="number" id="kms" value="98">
+    <input type="number" id="kms">
     <label>Fascia d'età</label>
     <select id="age">
         <option value="maggiorenne">Maggiorenne</option>
-        <option value="minorenne" id="minorenne">Minorenne</option>
-        <option value="over65" id="over65">Over 65</option>
+        <option value="minorenne">Minorenne</option>
+        <option value="over65">Over 65</option>
     </select>
     <button id="generate">Genera</button>
     <button id="discard">Annulla</button>
