--- a/index.html
+++ b/index.html
@@ -7,26 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <title>Biglietto Treno</title>
 </head>
 
 <body>
-    <label>Nome Cognome</label>
-    <input type="text" id="name-surname">
-    <label>Km da percorrere</label>
-    <input type="number" id="kms">
-    <label>Fascia d'età</label>
-    <select id="age">
-        <option value="maggiorenne">Maggiorenne</option>
-        <option value="minorenne">Minorenne</option>
-        <option value="over65">Over 65</option>
-    </select>
-    <button id="generate">Genera</button>
-    <button id="discard">Annulla</button>
 
-    <p id="elementname"></p>
-    <p id="elementage"></p>
-    <p id="elementprice"></p>
+    <div class="container">
+        <h1 class="text-center text-white py-3">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+        <div class="row">
+            <div class="col-12 generatesection">
+                <div class="row justify-content-center pt-3">
+                    <div class="col-3 d-flex flex-column">
+
+                        <h3 class="text-center">Nome Cognome</h3>
+                        <input type="text" id="name-surname">
+                    </div>
+
+                    <div class="col-3 d-flex flex-column">
+                        <h3 class="text-center">Km da percorrere</h3>
+                        <input type="number" id="kms">
+                    </div>
+
+
+                    <div class="col-3 d-flex flex-column">
+
+                        <h3 class="text-center">Fascia d'età</h3>
+                        <select id="age">
+                            <option value="maggiorenne">Maggiorenne</option>
+                            <option value="minorenne">Minorenne</option>
+                            <option value="over65">Over 65</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="row mt-5 py-5">
+                    <div class="col-12 d-flex justify-content-center">
+
+                        <button id="generate" class="me-4">Genera</button>
+                        <button id="discard">Annulla</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <p id="elementname"></p>
+        <p id="elementage"></p>
+        <p id="elementprice"></p>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
