--- a/index.html
+++ b/index.html
@@ -50,10 +50,43 @@
                 </div>
             </div>
         </div>
+        <h1 class="text-white text-center mt-5">IL TUO BIGLIETTO</h1>
+        <div class="row justify-content-center mt-2">
+            <div class="col-8 ticketsection">
+                <h4>DETTAGLIO PASSEGGERI</h4>
+                <div class="row">
+                    <div class="col-4 passengersection pt-4">
+                        <h5>NOME PASSEGGERO</h5>
+                        <p id="elementname"></p>
+                    </div>
+                    <div class="col-8 ticket">
+                        <div class="row h-100">
+                            <div class="col-3 d-flex flex-column ">
+                                <h6 class="pb-5">Offerta</h6>
+                                <p id="elementage"></p>
 
-        <p id="elementname"></p>
-        <p id="elementage"></p>
-        <p id="elementprice"></p>
+
+                            </div>
+                            <div class="col-3 d-flex flex-column">
+                                <h6 class="pb-5">Carrozza</h6>
+                                <p>7</p>
+
+                            </div>
+                            <div class="col-3 d-flex flex-column ">
+                                <h6 class="pb-5">Codice CP</h6>
+                                <p>92382</p>
+
+                            </div>
+                            <div class="col-3 d-flex flex-column">
+                                <h6 class="pb-5">Costo Biglietto</h6>
+                                <p id="elementprice"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
     <script src="js/script.js"></script>
