add random cp & carrozza numbers

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                             </div>
                             <div class="col-3 d-flex flex-column">
                                 <h6 class="pb-5">Carrozza</h6>
-                                <p>7</p>
+                                <p id="carrozza"></p>
 
                             </div>
                             <div class="col-3 d-flex flex-column ">
                                 <h6 class="pb-5">Codice CP</h6>
-                                <p>92382</p>
+                                <p id="cp"></p>
 
                             </div>
                             <div class="col-3 d-flex flex-column">
